.xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/ellychan/.xmonad/build-x86_64-linux -o /home/ellychan/.xmonad/xmonad-x86_64-linux

xmonad.hs:283:6: error: parse error on input ‘=’
    |
283 | main = do
    |      ^
